# terminal

./: .gitignore  .npmignore  CLAUDE.md  LICENSE  PROJECT_PLAN.md  README.md  package.json  perry.config.ts  tsconfig.json
core/: emulator.ts  index.ts
core/buffer/: cell.ts  index.ts  line.ts  screen-buffer.ts  scrollback.ts
core/input/: index.ts  key-encoder.ts  mouse-encoder.ts
core/pty/: index.ts  pty-manager.ts  unix-pty.ts  win-conpty.ts
core/vt-parser/: csi.ts  dcs.ts  index.ts  osc.ts  parser.ts
examples/standalone-terminal/: build-linux.sh  build-windows.bat  build.sh  main.ts  perry.config.ts
native/: ffi-bridge.ts  index.ts  render-coordinator.ts
native/android/: Cargo.toml
native/android/src/: lib.rs
native/ios/: Cargo.toml
native/ios/src/: lib.rs
native/linux/: Cargo.toml
native/linux/examples/: demo_terminal.rs
native/linux/src/: grid_renderer.rs  lib.rs  terminal_view.rs  view.rs
native/macos/: Cargo.toml
native/macos/examples/: demo_terminal.rs
native/macos/src/: grid_renderer.rs  lib.rs  pty.rs  string_header.rs  terminal_state.rs  terminal_view.rs  view.rs
native/web/src/: lib.rs
native/windows/: Cargo.toml
native/windows/examples/: demo_terminal.rs
native/windows/src/: grid_renderer.rs  lib.rs  terminal_view.rs  view.rs
perry/: index.ts  live.ts  terminal-component.ts
tests/: emulator.test.ts
tests/buffer/: cell.test.ts  screen-buffer.test.ts  scrollback.test.ts
tests/input/: key-encoder.test.ts  mouse-encoder.test.ts
tests/vt-parser/: csi.test.ts  osc.test.ts  parser.test.ts  sgr.test.ts
view-model/: cell-grid.ts  cursor.ts  index.ts  search.ts  selection.ts  theme.ts
