[package]
name = "hone-terminal-linux"
version = "0.1.0"
edition = "2021"
description = "Linux native rendering for Hone Terminal (Cairo + Pango + X11)"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cairo-rs = { version = "0.20", features = ["xlib"] }
pango = "0.20"
pangocairo = "0.20"
x11 = { version = "2.21", features = ["xlib"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[[example]]
name = "demo_terminal"
path = "examples/demo_terminal.rs"
