[package]
name = "hone-terminal-macos"
version = "0.1.0"
edition = "2021"
description = "macOS native rendering for Hone Terminal (Core Text + Core Graphics)"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
core-graphics = "0.23"
core-text = "20.1"
cocoa = "0.25"
objc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
vte = "0.13"

[[example]]
name = "demo_terminal"
path = "examples/demo_terminal.rs"
