[package]
name = "hone-terminal-windows"
version = "0.1.0"
edition = "2021"
description = "Windows native rendering for Hone Terminal (Direct2D + DirectWrite)"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dependencies.windows]
version = "0.58"
features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
]

[[example]]
name = "demo_terminal"
path = "examples/demo_terminal.rs"
